--- a/Assignment/Areas/Home/Pages/Class_Timetable.cshtml
+++ b/Assignment/Areas/Home/Pages/Class_Timetable.cshtml
@@ -277,7 +277,7 @@
                             <tbody>
                                 <tr>
                                     <td class="class-time">6.00am - 8.00am</td>
-                                    @foreach (var room in Model.listRoom)
+                                    @foreach (var room in Model.listRoom1)
                                     {
                                         <td class="clickable-room">
                                             <form method="post" action="/Class-details">
@@ -290,7 +290,7 @@
                                 </tr>
                                 <tr>
                                     <td class="class-time">8.30am - 10.30am</td>
-                                    @foreach (var room in Model.listRoom)
+                                    @foreach (var room in Model.listRoom2)
                                     {
                                         <td class="clickable-room">
                                             <form method="post" action="/Class-details">
@@ -303,7 +303,7 @@
                                 </tr>
                                 <tr>
                                     <td class="class-time">2.00pm - 4.00pm</td>
-                                    @foreach (var room in Model.listRoom)
+                                    @foreach (var room in Model.listRoom3)
                                     {
                                         <td class="clickable-room">
                                             <form method="post" action="/Class-details">
@@ -316,7 +316,7 @@
                                 </tr>
                                 <tr>
                                     <td class="class-time">4.30pm - 6.30pm</td>
-                                    @foreach (var room in Model.listRoom)
+                                    @foreach (var room in Model.listRoom4)
                                     {
                                         <td class="clickable-room">
                                             <form method="post" action="/Class-details">
@@ -329,7 +329,7 @@
                                 </tr>
                                 <tr>
                                     <td class="class-time">7.00pm - 9.00pm</td>
-                                    @foreach (var room in Model.listRoom)
+                                    @foreach (var room in Model.listRoom5)
                                     {
                                         <td class="clickable-room">
                                             <form method="post" action="/Class-details">
